cmem now default

--- a/examples/embedding_into_app/runtime/ufrmmain.lfm
+++ b/examples/embedding_into_app/runtime/ufrmmain.lfm
@@ -3,12 +3,12 @@ object Form1: TForm1
   Height = 161
   Top = 0
   Width = 230
+  ActiveControl = btnActivateServer
   Caption = 'Form1'
   ClientHeight = 161
   ClientWidth = 230
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  LCLVersion = '1.8.0.6'
   Visible = False
   object btnActivateServer: TButton
     Left = 32
